// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill applies the elementAttributes prop correctly 1`] = `
<div
  aria-label="foo"
  data-radium={true}
  style={
    Object {
      "backgroundColor": "#CC0033",
      "borderRadius": 16,
      "color": "white",
      "display": "inline-block",
      "marginBottom": 8,
      "marginLeft": 8,
      "marginRight": 8,
      "marginTop": 8,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
      "textAlign": "center",
      "width": "auto",
    }
  }
>
  HI
</div>
`;

exports[`Pill renders correctly when style overrides are provided 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "backgroundColor": "#CC0033",
      "borderRadius": 16,
      "color": "white",
      "display": "inline-block",
      "marginBottom": 8,
      "marginLeft": 8,
      "marginRight": 8,
      "marginTop": 8,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
      "textAlign": "center",
      "textDecoration": "underline",
      "width": "auto",
    }
  }
>
  HI
</div>
`;

exports[`Pill renders without throwing 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "backgroundColor": "#CC0033",
      "borderRadius": 16,
      "color": "white",
      "display": "inline-block",
      "marginBottom": 8,
      "marginLeft": 8,
      "marginRight": 8,
      "marginTop": 8,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
      "textAlign": "center",
      "width": "auto",
    }
  }
>
  HI
</div>
`;
